master: para added
A new paragraph added

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
     <h1 color="blue">This is the home</h1>
     <h1 bgcolor="blue"> This the new line</h1>
+    <p>Pata added</p>
 </body>
 
 </html>
