master : mypage new para added
The new para added in the file.

--- a/mypage.html
+++ b/mypage.html
@@ -8,6 +8,9 @@
 <body>
     <h1 color="blue">This is new Page</h1>
     <h1>Again new line </h1>
+
+    <p>This the new para and the new addition in the file</p>
+
 </body>
 
 </html>
