Maste : header added
the new header added

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <h1 color="blue">This is the home</h1>
     <h1 bgcolor="blue"> This the new line</h1>
     <p>Pata added</p>
+    <h2>The new header</h2>
 </body>
 
 </html>
